build: generate build files

--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minimal UI Kit</title>
+    <meta name="theme-color" content="#000000" />
+
+    <title>ASPPIBRA</title>
+    <meta name="description" content="ASPPIBRA - Global Solutions for Governance and Innovation." />
+
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://asppibra.com/" />
+    <meta property="og:title" content="ASPPIBRA | Innovation & Governance" />
+    <meta property="og:description" content="Connecting technology and transparency globally." />
+    <meta property="og:image" content="https://asppibra.com/android-chrome-512x512.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://asppibra.com/" />
+    <meta property="twitter:title" content="ASPPIBRA | Innovation & Governance" />
+    <meta property="twitter:description" content="Connecting technology and transparency globally." />
+    <meta property="twitter:image" content="https://asppibra.com/android-chrome-512x512.png" />
+
+    <link rel="canonical" href="https://asppibra.com/" />
   </head>
 
   <body>
