build: implement institutional branding, SEO metadata and PWA infrastructure
- Standardize app name and global configs for ASPPIBRA

- Setup react-helmet-async for dynamic SEO management

- Update build script for institutional robots.txt and sitemap generation

- Configure Open Graph and Twitter metadata for global social sharing

- Optimize Provider tree in app.tsx with HelmetProvider

- Install react-helmet-async via pnpm

--- a/index.html
+++ b/index.html
@@ -2,33 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#00A76F" /> <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <title>ASPPIBRA</title>
-    <meta name="description" content="ASPPIBRA - Global Solutions for Governance and Innovation." />
+    <title>ASPPIBRA | Sovereign Identity & Governance System</title>
+    <meta name="description" content="Institutional governance platform and sovereign Identity Provider (IdP) for DAO, Agro, and RWA. Secure, transparent, and globally scalable." />
+    <meta name="keywords" content="Governance, DAO, Web3, RWA, Identity Provider, Agro, Blockchain, Compliance" />
 
     <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-
-    <meta property="og:type" content="website" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" /> <meta property="og:type" content="website" />
     <meta property="og:url" content="https://asppibra.com/" />
-    <meta property="og:title" content="ASPPIBRA | Innovation & Governance" />
-    <meta property="og:description" content="Connecting technology and transparency globally." />
+    <meta property="og:site_name" content="ASPPIBRA Governance" />
+    <meta property="og:title" content="ASPPIBRA | Institutional Governance & Web3 Identity" />
+    <meta property="og:description" content="High-security Identity Provider for decentralized governance and Real World Assets (RWA)." />
     <meta property="og:image" content="https://asppibra.com/android-chrome-512x512.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://asppibra.com/" />
-    <meta property="twitter:title" content="ASPPIBRA | Innovation & Governance" />
-    <meta property="twitter:description" content="Connecting technology and transparency globally." />
+    <meta property="twitter:title" content="ASPPIBRA | Sovereign Governance System" />
+    <meta property="twitter:description" content="Empowering global governance through technology and transparency. DAO, Agro, and RWA solutions." />
     <meta property="twitter:image" content="https://asppibra.com/android-chrome-512x512.png" />
 
     <link rel="canonical" href="https://asppibra.com/" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
 
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
